--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/image_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         app:srcCompat="@drawable/logo" />
 
     <Button
+        android:id="@+id/button_start"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
         android:layout_below="@id/image_logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:id="@+id/button_start"
-        android:layout_width="400dp"
-        android:layout_height="48dp"
         android:background="@drawable/button"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
         android:fontFamily="@font/futuhv"
-        android:text="Let's Start" />
+        android:text="Let's Start"
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
