--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="btn_color">#1E3135</color>
+    <color name="primary">#1E3135</color>
     <color name="start_color">#8C0000</color>
 </resources>
