--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#1E3135"/>
+    <solid android:color="@color/primary"/>
     <corners android:radius="8dp"/>
 </shape>
