--- a/app/src/main/res/layout/activity_mobil.xml
+++ b/app/src/main/res/layout/activity_mobil.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main2"
+    android:id="@+id/main_mobil"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background">
@@ -11,7 +11,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<"
+        android:text="@string/symbol"
         android:textSize="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
@@ -21,7 +21,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BACK"
+        android:text="@string/back"
         android:textSize="15sp"
         android:layout_marginTop="26dp"
         android:layout_marginLeft="50dp"
@@ -31,7 +31,7 @@
     <ImageView
         android:layout_width="336dp"
         android:layout_height="420dp"
-        android:background="@drawable/Rect"
+        android:background="@drawable/rect"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"/>
 
@@ -91,7 +91,7 @@
             android:layout_marginTop="620dp"
             android:background="@drawable/button"
             android:fontFamily="@font/futuhv"
-            android:text= "About"
+            android:text= "@string/about"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:layout_marginEnd="50dp"/>
@@ -102,7 +102,7 @@
             android:layout_marginTop="620dp"
             android:background="@drawable/button"
             android:fontFamily="@font/futuhv"
-            android:text= "Logout"
+            android:text= "@string/logout"
             android:textAllCaps="false"
             android:textColor="@color/white"/>
     </LinearLayout>
